# CS165_TLS

./: CMakeLists.txt  README.md
certificates/: chain.pem  client.crt  client.key  root.pem  server.crt  server.key
certificates/root/: index.txt
certificates/root/certs/: ca.cert.pem
certificates/root/newcerts/: 1000.pem
certificates/root/private/: ca.key.pem
src/: CMakeLists.txt
src/client/: client.c
src/proxy/: proxy.c
src/server/: server.c
